# hust.year20232.compiler

./: .gitignore  .gitmodules  CMakeLists.txt  compile.bat  lexical_parser.c  lexical_parser.h  main.c  syntax_analyser.c  syntax_analyser.h  test.pl0
tests/lexical_parser/: lexical_parser_test.c
tests/lexical_parser/resources/: test1.expected.txt  test2.expected.txt  test3.expected.txt
tests/resources/: test1.pl0  test2.pl0  test3.pl0
tests/syntax_analyser/: syntax_analyser_test.c
